--- a/Praesentation/index.html
+++ b/Praesentation/index.html
@@ -14,9 +14,9 @@
     <main>
         <h1>Name</h1>
         <ul class="process">
-            <li><a href="day1.html">1 <p>Some Title</p></a></li>
+            <li><a href="day1.html">1 <p>1</p></a></li>
             <li><a href="day2.html">2 <p>Some Title</p></a></li>
-            <li><a href="molnar.html">3 <p>Vera Molnar</p></a></li>
+            <li><a href="molnar.html">3 <p>?</p></a></li>
             <li><a href="day4.html">4 <p>Some Title</p></a></li>
             <li><a href="day5.html">5 <p>Some Title</p></a></li>
             <li> <a href="day6.html">6 <p>Some Title</p></a></li>
