--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prozess Example Page</title>
+    <title>Destillat</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
     <main>
-        <h1>Name</h1>
+        <h1>Tim Ruf & Michèle Raez</h1>
         <ul class="process">
             <li><a href="day1.html">1 <p>?</p></a></li>
             <li><a href="day2.html">2 <p>Some Title</p></a></li>
