--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <main>
-        <marquee>Tim Ruf & Michèle Raez</marquee>
+        <h1>Tim Ruf & Michèle Raez</h1>
         <ul class="process">
             <li><a href="day1.html">1 <p>?</p></a></li>
             <li><a href="day2.html">2 <p>Some Title</p></a></li>
