--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
         <h1>Name</h1>
         <ul class="process">
-            <li><a href="day1.html">1 <p>Some Title</p></a></li>
+            <li><a href="Bildschirmfoto 2023-06-01 um 15.13.40.png">1 <p>Some Title</p></a></li>
             <li><a href="day2.html">2 <p>Some Title</p></a></li>
             <li><a href="molnar.html">3 <p>Vera Molnar</p></a></li>
             <li><a href="day4.html">4 <p>Some Title</p></a></li>
