--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Name</h1>
         <ul class="process">
             <li><a href="Bildschirmfoto 2023-06-01 um 15.13.40.png">1 <p>Some Title</p></a></li>
-            <li><a href="day2.html">2 <p>Some Title</p></a></li>
+            <li><a href="Bildschirmfoto 2023-06-01 um 15.14.45.png">2 <p>Some Title</p></a></li>
             <li><a href="molnar.html">3 <p>Vera Molnar</p></a></li>
             <li><a href="day4.html">4 <p>Some Title</p></a></li>
             <li><a href="day5.html">5 <p>Some Title</p></a></li>
