--- a/index.html
+++ b/index.html
@@ -5,26 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prozess Example Page</title>
+    <title>Tim Ruf & Michèle Raez</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
     <main>
-        <h1>Name</h1>
+        <h1>Tim Ruf & Michèle Raez</h1>
         <ul class="process">
-            <li><a href="Bildschirmfoto 2023-06-01 um 15.13.40.png">1 <p>Some Title</p></a></li>
-            <li><a href="Bildschirmfoto 2023-06-01 um 15.14.45.png">2 <p>Some Title</p></a></li>
-            <li><a href="molnar.html">3 <p>Vera Molnar</p></a></li>
-            <li><a href="day4.html">4 <p>Some Title</p></a></li>
-            <li><a href="day5.html">5 <p>Some Title</p></a></li>
-            <li> <a href="day6.html">6 <p>Some Title</p></a></li>
-            <li><a href="day7.html">7 <p>Some Title</p></a></li>
-            <li><a href="day8.html">8 <p>Some Title</p></a></li>
-            <li><a href="day9.html">9 <p>Some Title</p></a></li>
-            <li><a href="day10.html">10 <p>Some Title</p></a></li>
-
+            <li><a href="Bildschirmfoto 2023-06-01 um 15.13.40.png">1 <p>process 1</p></a></li>
+            <li><a href="Bildschirmfoto 2023-06-01 um 15.14.45.png">2 <p>process 2</p></a></li>
+            <li><a href="molnar.html">3 <p>process 3</p></a></li>
+            <li><a href="day4.html">4 <p>Text</p></a></li>
+            <li><a href="day5.html">5 <p>Sprint 1</p></a></li>
+            <li> <a href="day6.html">6 <p>Spare</p></a></li>
+            <li><a href="day7.html">7 <p>Link zu Destillat</p></a></li>
+            <li><a href="day8.html">8 <p>Spare</p></a></li>
+        
 
         </ul>
         
