--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <main>
         <h1>Tim Ruf & Michèle Raez</h1>
         <ul class="process">
-            <li><a href="Bildschirmfoto 2023-06-01 um 15.13.40.png">1 <p>process 1</p></a></li>
-            <li><a href="Bildschirmfoto 2023-06-01 um 15.14.45.png">2 <p>process 2</p></a></li>
-            <li><a href="molnar.html">3 <p>process 3</p></a></li>
-            <li><a href="day4.html">4 <p>Text</p></a></li>
-            <li><a href="day5.html">5 <p>Sprint 1</p></a></li>
-            <li> <a href="day6.html">6 <p>Spare</p></a></li>
-            <li><a href="day7.html">7 <p>Link zu Destillat</p></a></li>
-            <li><a href="day8.html">8 <p>Spare</p></a></li>
+            <li><a href="Bildschirmfoto 2023-06-01 um 15.13.40.png">: <p>process 1</p></a></li>
+            <li><a href="Bildschirmfoto 2023-06-01 um 15.14.45.png">:- <p>process 2</p></a></li>
+            <li><a href="molnar.html">:-) <p>process 3</p></a></li>
+            <li><a href="day4.html">:-)) <p>Text</p></a></li>
+            <li><a href="day5.html">:-))) <p>Sprint 1</p></a></li>
+            <li> <a href="day6.html">:-))) <p>Spare</p></a></li>
+            <li><a href="day7.html">:-)))) <p>Link zu Destillat</p></a></li>
+            <li><a href="day8.html">:-))))) <p>Spare</p></a></li>
         
 
         </ul>
