--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="Bildschirmfoto 2023-06-01 um 15.13.40.png">: <p>process 1</p></a></li>
             <li><a href="Bildschirmfoto 2023-06-01 um 15.14.45.png">:- <p>process 2</p></a></li>
             <li><a href="molnar.html">:-) <p>process 3</p></a></li>
-            <li><a href="day4.html">:-)) <p>theoretisches statement</p></a></li>
+            <li><a href="Statement">:-)) <p>theoretisches statement</p></a></li>
             <li><a href="day5.html">:-))) <p>sprint 1</p></a></li>
             <li> <a href="day6.html">:-))) <p>spare</p></a></li>
             <li><a href="day7.html">:-)))) <p>link zu Destillat</p></a></li>
