--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
             <li><a href="Bildschirmaufnahme 2023-05-30 um 11.27.07.mov">:- <p>process 2</p></a></li>
             <li><a href="molnar.html">:-) <p>process 3</p></a></li>
             <li><a href="Statement">:-)) <p>theoretisches statement</p></a></li>
-            <li><a href="day5.html">:-))) <p>sprint 1</p></a></li>
-            <li> <a href="day6.html">:-))) <p>spare</p></a></li>
-            <li><a href="day7.html">:-)))) <p>link zu Destillat</p></a></li>
-            <li><a href="day8.html">:-))))) <p>spare</p></a></li>
+            <li><a href="day5.html">:-))) <p>link zu Destillat</p></a></li>
+            <li> <a href="day6.html">:-))) <p>Sprint 1</p></a></li>
+        
         
 
         </ul>
