--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             <li><a href="molnar.html">:-) <p>process 3</p></a></li>
             <li><a href="Statement">:-)) <p>theoretisches statement</p></a></li>
             <li><a href="day5.html">:-))) <p>link zu Destillat</p></a></li>
-            <li> <a href="day6.html">:-))) <p>Sprint 1</p></a></li>
+            <li> <a href="day6.html">:-))) <p>sprint 1 Tim</p></a></li>
+              <li> <a href="day6.html">:-))) <p>sprint 1 Michèle</p></a></li>
         
         
 
