--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li><a href="Statement">:-)) <p>theoretisches statement</p></a></li>
             <li><a href="day5.html">:-))) <p>link zu Destillat</p></a></li>
             <li> <a href="Mein_Code">:-))) <p>sprint 1 Tim</p></a></li>
-              <li> <a href="day6.html">:-))) <p>sprint 1 Michèle</p></a></li>
+              <li> <a href="sprint 1">:-))) <p>sprint 1 Michèle</p></a></li>
         
         
 
