--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
         <h1>Tim Ruf & Michèle Raez</h1>
         <ul class="process">
-            <li><a href="Bildschirmfoto 2023-06-01 um 15.13.40.png">: <p>process 1</p></a></li>
+            <li><a href="Bildschirmaufnahme 2023-05-30 um 09.49.03 Kopie.mov">: <p>process 1</p></a></li>
             <li><a href="Bildschirmaufnahme 2023-05-30 um 11.27.07.mov">:- <p>process 2</p></a></li>
             <li><a href="Bildschirmfoto 2023-06-02 um 13.48.53.png">:-) <p>process 3</p></a></li>
             <li><a href="Statement">:-)) <p>theoretisches statement</p></a></li>
