--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li><a href="Bildschirmfoto 2023-06-02 um 13.48.53.png">:-) <p>process 3</p></a></li>
             <li><a href="Statement">:-)) <p>theoretisches statement</p></a></li>
             <li><a href="WhatsApp Video 2023-06-04 at 6.17.59 PM.mp4">:-))) <p>link zu Destillat</p></a></li>
+            <li><a href="textAnalyser.zip">:-))) <p>download Destillat</p></a></li>
             <li> <a href="Mein_Code">:-))) <p>sprint 1 Tim</p></a></li>
               <li> <a href="sprint 1">:-))) <p>sprint 1 Michèle</p></a></li>
         
